# expremoji

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  LICENSE  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: model.py  start.py
backend/app/core/: config.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
notebooks/: fer.ipynb
