[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ujwal Arak <ujwal99arak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.0"}
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
